deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tugas1-deployment
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        
      maxUnavailable: 1  
  selector:
    matchLabels:
      app: tugas1
  template:
    metadata:
      labels:
        app: tugas1
    spec:
      containers:
      - name: tugas1
        image: noelll/tugas1:v0.1
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
