service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tugas1-service
spec:
  selector:
    app: tugas1   
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 80   
  type: ClusterIP      
  
---

apiVersion: v1
kind: Service
metadata:
  name: tugas1-service-nodeport
spec:
  selector:
    app: tugas1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  
  type: NodePort
  
---

apiVersion: v1
kind: Service
metadata:
  name: tugas1-service-lb
spec:
  selector:
    app: tugas1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
