ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tugas1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tugas1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tugas1-service
            port:
              number: 80
